--- a/pj_base/CMakeLists.txt
+++ b/pj_base/CMakeLists.txt
@@ -4,8 +4,8 @@ add_executable(${BinName}
 )
 
 pico_enable_stdio_usb(${BinName} 1)
-pico_enable_stdio_uart(${BinName} 0)
+pico_enable_stdio_uart(${BinName} 1)
 
-target_link_libraries(${BinName} pico_stdlib hardware_i2c)
+target_link_libraries(${BinName} pico_stdlib)
 pico_add_extra_outputs(${BinName})
 
