--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type":"cortex-debug",
             "cwd": "${workspaceRoot}",
             // "executable": "${command:cmake.launchTargetPath}",
-            "executable": "${workspaceRoot}/build/pj_base/pj_base.elf",
+            "executable": "${workspaceRoot}/build/pj_paint/pj_paint.elf",
             "request": "launch",
             "servertype": "external",
             // This may need to be arm-none-eabi-gdb depending on your system
