Add my pico-tflmicro as submodule. Add pj_tflmicro_sin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,5 +10,8 @@ set(CMAKE_CXX_STANDARD 17)
 
 pico_sdk_init()
 
+add_subdirectory(pico-tflmicro)
+
 # add_subdirectory(pj_base)
-add_subdirectory(pj_paint)
+# add_subdirectory(pj_paint)
+add_subdirectory(pj_tflmicro_sin)
