--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ add_subdirectory(pico-tflmicro)
 
 # add_subdirectory(pj_base)
 # add_subdirectory(pj_paint)
-add_subdirectory(pj_tflmicro_sin)
-add_subdirectory(pj_tflmicro_mnist)
+# add_subdirectory(pj_tflmicro_sin)
+# add_subdirectory(pj_tflmicro_mnist)
 
+add_subdirectory(pj_adc)
