--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,5 +16,4 @@ add_subdirectory(pico-tflmicro)
 # add_subdirectory(pj_paint)
 # add_subdirectory(pj_tflmicro_sin)
 # add_subdirectory(pj_tflmicro_mnist)
-
-add_subdirectory(pj_adc)
+add_subdirectory(pj_adc_fft)
