--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,5 @@ add_subdirectory(pico-tflmicro)
 # add_subdirectory(pj_paint)
 # add_subdirectory(pj_tflmicro_sin)
 # add_subdirectory(pj_tflmicro_mnist)
-add_subdirectory(pj_adc_fft)
+# add_subdirectory(pj_adc_fft)
+add_subdirectory(pj_tflmicro_speech)
