--- a/pj_tflmicro_speech/CMakeLists.txt
+++ b/pj_tflmicro_speech/CMakeLists.txt
@@ -18,6 +18,10 @@ target_include_directories(${BinName}
 
 file(GLOB_RECURSE SRC ${CMAKE_CURRENT_LIST_DIR}/*.c ${CMAKE_CURRENT_LIST_DIR}/*.cpp ${CMAKE_CURRENT_LIST_DIR}/*.cc ${CMAKE_CURRENT_LIST_DIR}/*.cxx ${CMAKE_CURRENT_LIST_DIR}/*.h ${CMAKE_CURRENT_LIST_DIR}/*.hpp)
 
+if(BUILD_ON_PC)
+    list(FILTER SRC EXCLUDE REGEX  ".*adc_buffer")
+endif()
+
 target_sources(${BinName}
     PRIVATE
     ${SRC}
