[pj_voice_assistant_wake_word] Update model

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,4 +17,5 @@ add_subdirectory(pico-tflmicro)
 # add_subdirectory(pj_tflmicro_sin)
 # add_subdirectory(pj_tflmicro_mnist)
 # add_subdirectory(pj_adc_fft)
-add_subdirectory(pj_tflmicro_speech)
+# add_subdirectory(pj_tflmicro_speech)
+add_subdirectory(pj_voice_assistant_wake_word)
