--- a/pj_voice_assistant_wake_word/CMakeLists.txt
+++ b/pj_voice_assistant_wake_word/CMakeLists.txt
@@ -17,6 +17,7 @@ target_include_directories(${BinName}
 )
 
 file(GLOB_RECURSE SRC ${CMAKE_CURRENT_LIST_DIR}/*.c ${CMAKE_CURRENT_LIST_DIR}/*.cpp ${CMAKE_CURRENT_LIST_DIR}/*.cc ${CMAKE_CURRENT_LIST_DIR}/*.cxx ${CMAKE_CURRENT_LIST_DIR}/*.h ${CMAKE_CURRENT_LIST_DIR}/*.hpp)
+list(FILTER SRC EXCLUDE REGEX  ".*/01_script/.*")
 
 if(BUILD_ON_PC)
     list(FILTER SRC EXCLUDE REGEX  ".*adc_buffer")
